objects/System_Subscription_Email__c.object
<CustomObject>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>To_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Subscription_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSent</label>
        <type>Checkbox</type>
    </fields>
    <label>System Subscription Email</label>
    <nameField>
        <displayFormat>SysEmail-{0000}</displayFormat>
        <label>System Subscription Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Subscription Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>